--- a/package.json
+++ b/package.json
@@ -6,13 +6,10 @@
   "license": "MIT",
   "main": "index.js",
   "scripts": {
-    "prepublish": "npm run compile",
     "publish": "git push origin --tags && git push origin",
     "release:patch": "npm version patch && npm publish",
     "release:minor": "npm version minor && npm publish",
     "release:major": "npm version major && npm publish",
-    "compile": "rimraf -rf lib/ && babel src/ -d lib/ --copy-files",
-    "watch": "babel --watch src/ --source-maps inline -d lib/ --copy-files",
     "lint": "eslint-if-supported semistandard --fix",
     "mocha": "mocha --opts mocha.opts",
     "coverage": "istanbul cover node_modules/mocha/bin/_mocha -- --opts mocha.opts",
@@ -26,15 +23,12 @@
     "babel-polyfill": "^6.23.0",
     "bluebird": "^3.5.0",
     "debug": "^2.6.6",
+    "esm": "^3.0.14",
     "ramda": "^0.24.1",
     "sift": "^5.1.0"
   },
   "devDependencies": {
-    "babel-core": "^6.24.1",
-    "babel-eslint": "^7.2.3",
-    "babel-plugin-add-module-exports": "^0.2.1",
-    "babel-plugin-root-import": "^5.1.0",
-    "babel-preset-env": "^1.4.0",
+    "babel-eslint": "^8.2.2",
     "eslint-if-supported": "^1.0.1",
     "eslint-plugin-promise": "^3.5.0",
     "gulp": "^3.9.1",
