--- a/package.json
+++ b/package.json
@@ -2,7 +2,11 @@
   "name": "playing-permissions",
   "version": "1.1.1",
   "description": "Flexible and powerful permissions module for playing applications.",
-  "author": "Forafish",
+  "author": {
+    "name": "playingio",
+    "email": "hello@playingio.com",
+    "url": "https://playingio.com"
+  },
   "license": "MIT",
   "main": "index.js",
   "scripts": {
